--- a/email-templates/basic.html
+++ b/email-templates/basic.html
@@ -1738,7 +1738,7 @@
                             <table>
                               <tr>
                                 <th>
-                                  <h4 class="text-center">Traveler's Oasis</h4>
+                                  <h4 class="text-center">Fort Smythe</h4>
                                 </th>
                                 <th class="expander"></th>
                               </tr>
